fixes to scrollbars invisibility

--- a/polymer/css/fin-hypergrid.css
+++ b/polymer/css/fin-hypergrid.css
@@ -9,6 +9,19 @@
     overflow: hidden;
 }
 
+fin-vampire-bar {
+    opacity: 0.0;
+    -webkit-transition: opacity 500ms;
+    -moz-transition: opacity 500ms;
+    -ms-transition: opacity 500ms;
+    -o-transition: opacity 500ms;
+    transition: opacity 500ms;
+}
+
+.visible {
+    opacity: 0.75;
+}
+
 .verticalScroller {
     position: absolute;
     top: 0;
@@ -52,3 +65,14 @@
 fin-vampire-bar {
     z-index: 10;
 }
+
+
+
+
+
+
+
+
+
+
+
